crates/ars-collections/tests/ui/tab_key_unknown_enum_option.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(stable)]
enum BadTab {
    Profile,
}

fn main() {}
